fix overflow

--- a/styles/resume_styles.css
+++ b/styles/resume_styles.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     background-color: lightslategray;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    overflow-x: hidden;
 }
 nav {
     width: 50px;
